yaml-examples/heimdall/heimdall-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: linuxserver/heimdall
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /config
            name: config
      volumes:
      -  name: config
         persistentVolumeClaim:
          claimName: heimdall
