yaml-examples/heimdall/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
spec:
  selector:
    app: heimdall
  ports:
  - port: 80
    targetPort: 80
