yaml-examples/heimdall/heimdall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall
  namespace: default
spec:
  rules:
  - host: heimdall.lan
    http:
      paths:
      - backend:
          service:
            name: heimdall
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
